[gd_scene load_steps=34 format=2]

[ext_resource path="res://Scenes/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Art/3D/Level1_GLTF/Level1_3.glb" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Enemies/ExplodingBarrel.tscn" type="PackedScene" id=3]
[ext_resource path="res://Resources/Shaders/CRTShader.shader" type="Shader" id=4]
[ext_resource path="res://Art/2D/CRTFrame.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Enemies/EnemySetup.tscn" type="PackedScene" id=6]
[ext_resource path="res://Art/3D/Level1_3/Level1_3.obj" type="ArrayMesh" id=7]
[ext_resource path="res://Resources/Fonts/Fonts/Roboto-36.tres" type="DynamicFont" id=8]
[ext_resource path="res://Scripts/DialogEasy.gd" type="Script" id=9]
[ext_resource path="res://Scripts/DialogStreamPlayer.gd" type="Script" id=10]
[ext_resource path="res://Art/Dialogs/S1D2.mp3" type="AudioStream" id=11]
[ext_resource path="res://Art/Dialogs/S1D3.mp3" type="AudioStream" id=12]
[ext_resource path="res://Art/Dialogs/S1D4.mp3" type="AudioStream" id=13]
[ext_resource path="res://Art/Dialogs/S1D5.mp3" type="AudioStream" id=14]
[ext_resource path="res://Art/Dialogs/S1D7.mp3" type="AudioStream" id=15]
[ext_resource path="res://Art/Dialogs/S1D1.mp3" type="AudioStream" id=16]
[ext_resource path="res://Art/Dialogs/S1D8.mp3" type="AudioStream" id=17]
[ext_resource path="res://Art/Dialogs/S1D6.mp3" type="AudioStream" id=18]
[ext_resource path="res://Art/Audio/ElevatorGoing.mp3" type="AudioStream" id=19]
[ext_resource path="res://Art/Audio/ElevatorDing.wav" type="AudioStream" id=20]
[ext_resource path="res://Resources/Environments/Default.tres" type="Environment" id=21]

[sub_resource type="GDScript" id=27]
script/source = "extends Spatial

var save_file : SaveFile

func _ready() -> void:
	$UI/UI/Elevator/AnimationPlayer.play(\"Elevate\")
	yield(get_tree().create_timer(1.0),\"timeout\")
	$DialogEasy.play_next()
	save_file = GameSaver.load_game()
	if(save_file.fast_graphics):
		get_tree().call_group(\"Lights\", \"set_shadow\", false)

func _on_DialogEasy_dialog_changed(dialog_text) -> void:
	$UI/UI/Subtitles/Label.text = dialog_text[0]

func _on_DialogEasy_dialog_over() -> void:
	$UI/UI/Elevator/AnimationPlayer.stop(true)
	$UI/UI/Elevator/AnimationPlayer.play(\"Open\")
	$UI/UI/Subtitles/Label.text = \"\"
	
func _on_AnimationPlayer_animation_finished(anim_name: String) -> void:
	if(anim_name == \"Open\"):
		$UI/UI/Level/Player.set_active(true)
"

[sub_resource type="ShaderMaterial" id=15]
shader = ExtResource( 4 )
shader_param/screen_width = 1920.0
shader_param/screen_height = 1080.0
shader_param/BarrelPower = 1.0
shader_param/color_bleeding = 1.5
shader_param/bleeding_range_x = 2.0
shader_param/bleeding_range_y = 2.0
shader_param/lines_distance = 6.0
shader_param/scan_size = 5.0
shader_param/scanline_alpha = 0.987
shader_param/lines_velocity = 10.0

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="Animation" id=24]
resource_name = "Elevate"
length = 3.5
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("Floor:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 641, -0.25, 0, 0.25, 0, 641, -0.25, 0, 0.25, 0, 641, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Floor:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -1080, -0.25, 0, 0.25, 0, -1080, -0.25, 0, 0.25, 0, 1080, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2.5 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("Black:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Floor:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Doors:custom_constants/separation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("GoingUp:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=26]
resource_name = "Open"
tracks/0/type = "value"
tracks/0/path = NodePath("Black:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Floor:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Doors:custom_constants/separation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 2264, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("GoingUp:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Ding:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=25]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Floor:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 641, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Floor:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("Black:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Floor:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Doors:custom_constants/separation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("GoingUp:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Ding:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="BoxShape" id=22]
extents = Vector3( 24.8041, 1, 15.5303 )

[sub_resource type="BoxShape" id=17]

[sub_resource type="BoxShape" id=28]
extents = Vector3( 24.705, 1, 41.1069 )

[sub_resource type="CubeMesh" id=18]

[sub_resource type="SpatialMaterial" id=19]
albedo_color = Color( 0.47451, 0.298039, 0.109804, 1 )

[sub_resource type="BoxShape" id=20]

[node name="TestLevel" type="Spatial"]
script = SubResource( 27 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="UI" type="Panel" parent="UI"]
material = SubResource( 15 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Frame" type="TextureRect" parent="UI/UI"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )

[node name="Elevator" type="Control" parent="UI/UI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Black" type="Panel" parent="UI/UI/Elevator"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 641.0
margin_right = 1278.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 23 )

[node name="Floor" type="Panel" parent="UI/UI/Elevator"]
margin_left = 641.0
margin_right = 1278.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 23 )

[node name="Doors" type="HBoxContainer" parent="UI/UI/Elevator"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
alignment = 1

[node name="Door1" type="Panel" parent="UI/UI/Elevator/Doors"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 960.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Door2" type="Panel" parent="UI/UI/Elevator/Doors"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 960.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/UI/Elevator"]
anims/Elevate = SubResource( 24 )
anims/Open = SubResource( 26 )
anims/RESET = SubResource( 25 )

[node name="GoingUp" type="AudioStreamPlayer" parent="UI/UI/Elevator"]
stream = ExtResource( 19 )
volume_db = 15.0
bus = "Effects"

[node name="Ding" type="AudioStreamPlayer" parent="UI/UI/Elevator"]
stream = ExtResource( 20 )
volume_db = 15.0
bus = "Effects"

[node name="Subtitles" type="Control" parent="UI/UI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="UI/UI/Subtitles"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 210.0
margin_top = 720.0
margin_right = -210.0
margin_bottom = -110.0
custom_fonts/font = ExtResource( 8 )
align = 1
valign = 1
autowrap = true

[node name="Level" type="Spatial" parent="UI/UI"]

[node name="Player" parent="UI/UI/Level" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.16153, 4.22919 )

[node name="LevelMesh" type="StaticBody" parent="UI/UI/Level"]
transform = Transform( 0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0, 0 )

[node name="CollisionShape2" type="CollisionShape" parent="UI/UI/Level/LevelMesh"]
transform = Transform( 1, 0, 0, 0, 0.794785, -0.60689, 0, 0.60689, 0.794785, -5.01627, 2.45057, -105.901 )
shape = SubResource( 22 )

[node name="MeshInstance" type="MeshInstance" parent="UI/UI/Level/LevelMesh"]
visible = false
mesh = ExtResource( 7 )

[node name="Level1_3" parent="UI/UI/Level/LevelMesh" instance=ExtResource( 2 )]

[node name="ExplodingBarrel" parent="UI/UI/Level" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.54179, 0.453697, -5.60052 )

[node name="ExplodingBarrel2" parent="UI/UI/Level" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.41756, 0.453697, -8.8352 )

[node name="ExplodingBarrel3" parent="UI/UI/Level" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.70435, 0.453697, -5.3101 )

[node name="EnemySetup" parent="UI/UI/Level" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.42125, 0, -7.58864 )
trigger = NodePath("../Area")

[node name="EnemySetup2" parent="UI/UI/Level" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.23818, 0, -9.22551 )
trigger = NodePath("../Area")

[node name="EnemySetup3" parent="UI/UI/Level" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.40924, 0, -8.94327 )
trigger = NodePath("../Area")

[node name="Area" type="Area" parent="UI/UI/Level"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.23799, 0, -4.26427 )
collision_layer = 4
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="UI/UI/Level/Area"]
shape = SubResource( 17 )

[node name="DirectionalLight" type="DirectionalLight" parent="UI/UI/Level" groups=["Lights"]]
transform = Transform( 0.707107, 0.5, -0.5, 0, 0.707107, 0.707107, 0.707107, -0.5, 0.5, 0, 31.5272, 0 )
light_energy = 2.0
shadow_enabled = true
shadow_bias = 0.383

[node name="OmniLight" type="OmniLight" parent="UI/UI/Level" groups=["Lights"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.37737, 6.25413, -4.52076 )
shadow_enabled = true
shadow_bias = 0.383
omni_range = 13.303

[node name="OmniLight2" type="OmniLight" parent="UI/UI/Level" groups=["Lights"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.37737, 6.25413, -10.3742 )
shadow_enabled = true
shadow_bias = 0.383
omni_range = 13.303

[node name="OmniLight3" type="OmniLight" parent="UI/UI/Level" groups=["Lights"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.37737, 6.25413, -15.1542 )
shadow_enabled = true
shadow_bias = 0.383
omni_range = 13.303

[node name="OmniLight4" type="OmniLight" parent="UI/UI/Level" groups=["Lights"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.37737, 6.25413, -20.1514 )
shadow_enabled = true
shadow_bias = 0.383
omni_range = 13.303

[node name="OmniLight5" type="OmniLight" parent="UI/UI/Level" groups=["Lights"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.37737, 6.25413, -25.5745 )
shadow_enabled = true
shadow_bias = 0.383
omni_range = 13.303

[node name="StaticBody" type="StaticBody" parent="UI/UI/Level"]

[node name="CollisionShape" type="CollisionShape" parent="UI/UI/Level/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.02117, 0 )
shape = SubResource( 28 )

[node name="StaticBody" type="StaticBody" parent="."]
transform = Transform( 0.883365, 0, -0.143258, 0, 0.571164, 0, 0.468685, 0, 0.27001, 5.26242, 0.306291, -3.82031 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody"]
mesh = SubResource( 18 )
skeleton = NodePath("../..")
material/0 = SubResource( 19 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 20 )

[node name="DialogEasy" type="Node" parent="."]
script = ExtResource( 9 )

[node name="Dialog1" type="AudioStreamPlayer" parent="DialogEasy"]
stream = ExtResource( 16 )
volume_db = 18.0
bus = "Effects"
script = ExtResource( 10 )
dialog_text = "Chester: Hello there McCliché, this is Chester, your hacker friend, can you hear me?"

[node name="Dialog2" type="AudioStreamPlayer" parent="DialogEasy"]
stream = ExtResource( 11 )
volume_db = 18.0
bus = "Effects"
script = ExtResource( 10 )
dialog_text = "McCliché: Loud and clear"

[node name="Dialog3" type="AudioStreamPlayer" parent="DialogEasy"]
stream = ExtResource( 12 )
volume_db = 18.0
bus = "Effects"
script = ExtResource( 10 )
dialog_text = "Chester: I've hacked the security system of the building, your guy is in the last floor"

[node name="Dialog4" type="AudioStreamPlayer" parent="DialogEasy"]
stream = ExtResource( 13 )
volume_db = 18.0
bus = "Effects"
script = ExtResource( 10 )
dialog_text = "McCliché: That asshole will pay for kidnapping my girl"

[node name="Dialog5" type="AudioStreamPlayer" parent="DialogEasy"]
stream = ExtResource( 14 )
volume_db = 18.0
bus = "Effects"
script = ExtResource( 10 )
dialog_text = "Chester: His office is protected by a metal door"

[node name="Dialog6" type="AudioStreamPlayer" parent="DialogEasy"]
stream = ExtResource( 18 )
volume_db = 18.0
bus = "Effects"
script = ExtResource( 10 )
dialog_text = "McCliché: Can I open that god damned door with bullets?"

[node name="Dialog7" type="AudioStreamPlayer" parent="DialogEasy"]
stream = ExtResource( 15 )
volume_db = 18.0
bus = "Effects"
script = ExtResource( 10 )
dialog_text = "Chester: No, you must find a key to open it"

[node name="Dialog8" type="AudioStreamPlayer" parent="DialogEasy"]
stream = ExtResource( 17 )
volume_db = 18.0
bus = "Effects"
script = ExtResource( 10 )
dialog_text = "McCliché: I don't know where you are, but I will find you, and I will take you"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 21 )

[connection signal="animation_finished" from="UI/UI/Elevator/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="dialog_changed" from="DialogEasy" to="." method="_on_DialogEasy_dialog_changed"]
[connection signal="dialog_over" from="DialogEasy" to="." method="_on_DialogEasy_dialog_over"]
